Fix overlapping for <a> elements and headers
Summary: Fix for a bug when <a> are not clickable right above any header

Test Plan: Open  `/latest/quick-start/build-apps/java/ysql-spring-data/#prerequisites` and check it

Reviewers: andrew

Reviewed By: andrew

Subscribers: ui

Differential Revision: https://phabricator.dev.yugabyte.com/D7470

--- a/docs/styles/_yuga_overrides.scss
+++ b/docs/styles/_yuga_overrides.scss
@@ -221,6 +221,7 @@ a {
   a {
     border-bottom: 1px dashed;
     color: $YB_ORANGE;
+
     &:hover {
       color: $YB_ORANGE;
       border-bottom-style: solid;
@@ -281,7 +282,7 @@ a {
 
   p, pre, ul, li, a {
     position: relative;
-    z-index: 2;
+    z-index: 1020;
   }
 
   i {
